Improves og image and homepage inner section style

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -103,7 +103,7 @@ section.about
               | Receba alimentos orgânicos no endereço da sua escolha, pagando pouco ou nada, conheça pessoas como você e seja um agente transformador da sua comunidade.
             = link_to 'Seja um Coordenador', 'https://triboviva.typeform.com/to/ua7QEp', class: 'btn btn--sm btn--brown'
           .col-sm-4
-            h2.title--up.text--brown Fique Conectado
+            h2.title--up.text--yellow Fique Conectado
             .socialLinks
               = link_to 'https://www.facebook.com/triboviva', title: 'Curta nossa página' do
                 span.fa.fa-facebook-square
@@ -111,7 +111,7 @@ section.about
                 span.fa.fa-twitter-square
               = link_to 'https://instagram.com/triboviva/', title: 'Siga-nos no Instagram' do
                 span.fa.fa-instagram
-            h3.text--brown Inscreva-se na nossa newsletter:
+            h3.text--yellow.title--up Receba por e-mail nossas ofertas
             .input-group
               #mc_embed_signup
                 form#mc-embedded-subscribe-form.validate action="//triboviva.us10.list-manage.com/subscribe/post?u=1f1e4e1052601b742b6863a53&amp;id=2dbbea5be5" method="post" name="mc-embedded-subscribe-form" novalidate="" target="_blank"
