--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -21,7 +21,7 @@ section.offers
               .col-sm-6.col-md-4
                 = link_to offer do
                   article.card
-                    .card__image style="background-image: url(#{offer.image.url});"
+                    .card__image style="background-image: url(#{offer.image.url(:home_thumb)});"
                     .card__info
                       span.card__info__price title="Preço total da cota"
                         = number_to_currency offer.coordinator_tax + offer.operational_tax + offer.value
@@ -66,7 +66,7 @@ section.old-offers
           - @finished_offers.each do |offer|
             .col-sm-6.col-md-4
               article.card
-                .card__image style="background-image: url(#{offer.image.url});"
+                .card__image style="background-image: url(#{offer.image.url(:home_thumb)});"
                 .card__info
                   span.card__info__price title="Preço total da cota"
                     = number_to_currency offer.coordinator_tax + offer.operational_tax + offer.value
