--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -87,6 +87,20 @@ section.old-offers
             .text-center
               = link_to 'Ver Mais Ofertas passadas', finished_offers_path, class: 'btn btn--md btn--yellow', title: 'Ver mais ofertas passadas'
 
+section.media
+  .container
+    .row
+      .col-sm-10.col-centered
+        h2.text--green.title--up Na Mídia
+        .row
+          .col-sm-4.text-center
+            = link_to image_tag('logo-record-bw.png'), 'http://www.rederecordrs.com.br/rio-grande-record/videos/a-feira-que-vai-ate-a-casa-do-consumidor-01102015', title: 'Record - A feira que vai até a casa do consumidor', class: 'img-responsive', target: '_blank'
+          .col-sm-4.text-center
+            = link_to image_tag('logo-zh-bw.png'), 'http://zh.clicrbs.com.br/rs/porto-alegre/pelas-ruas/noticia/2015/09/rede-transforma-apartamentos-na-capital-em-feirinha-de-organicos-4858600.html', title: 'ZH Online - Rede transforma apartamentos na Capital em feirinha de orgânicos', class: 'img-responsive', target: '_blank'
+          .col-sm-4.text-center
+            = link_to image_tag('logo-globotv-bw.png'), 'http://globotv.globo.com/rbs-rs/vida-e-saude/v/mudando-de-vida-jornalista-decide-por-rotina-mais-saudavel/4476230/', title: 'Globo.tv - Mudando de Vida: jornalista decide por rotina mais saudável', class: 'img-responsive', target: '_blank'
+
+
 section.about
   .container
     .row
