FIX number of buyers in deliver_coordinator mailer

--- a/app/views/remembers/deliver_coordinator.text.erb
+++ b/app/views/remembers/deliver_coordinator.text.erb
@@ -16,7 +16,7 @@ Produtos:
 COLETA
 
 Horário de coleta: entre <%= I18n.l @offer.collect_starts_at %> às <%= I18n.l @offer.collect_ends_at %>.
-Cotistas (<%= @offer.purchases.select(:user_id).count %> pessoas):
+Cotistas (<%= @offer.purchases.by_status(PurchaseStatus::PAID).select(:user_id).count %> pessoas):
 <% @offer.purchases.by_status(PurchaseStatus::PAID).each_with_index do |purchase, index| %>
 <%= index + 1 %>) <%= purchase.user.name %> - <%= purchase.user.phone %>
 <% end %>
