--- a/app/views/partials/_footer.html.slim
+++ b/app/views/partials/_footer.html.slim
@@ -12,8 +12,9 @@ footer.footer
               ul
                 li style="#{'display: none;' if params[:controller] == 'checkouts' || params[:controller] == 'purchases'}"
                   = link_to 'Como Funciona', about_path, title: 'Como Funciona'
+                li style="#{'display: none;' if params[:controller] == 'checkouts' || params[:controller] == 'purchases'}"
+                  = link_to 'Entregas', delivery_path, title: 'Entregas'
                 li
                   = link_to 'Termos de Compras', terms_path, title: 'Termos de Compras'
                 li
                   = link_to 'Contato', 'mailto:tribo@triboviva.com.br?subject=Olá Tribo Viva!', title: 'Mande um email para nós'
-
