Add style to charge_messages flash error

--- a/app/assets/stylesheets/molecules/_flash.scss
+++ b/app/assets/stylesheets/molecules/_flash.scss
@@ -12,7 +12,7 @@
   .success.wrapper, .notice.wrapper {
     background-color: $success;
   }
-  .failure.wrapper, .alerts-error.wrapper, .alerts-error.wrapper {
+  .failure.wrapper, .alerts-error.wrapper, .alerts-error.wrapper, .charge_messages.wrapper {
     background-color: $error;
   }
   .locale.wrapper {
