Adds delivery box in offer show

--- a/app/assets/stylesheets/base/_utility.scss
+++ b/app/assets/stylesheets/base/_utility.scss
@@ -148,6 +148,10 @@
   color: transparent;
 }
 
+.u-borderBrownMedium {
+  border-color: $brown-medium;
+}
+
 // # Print
 // # =================================================================
 .u-noPrint {
