Adds model for OfferItem and rename products_description to description
Also add new information to seed and change the attributes on forms of active admin

--- a/app/views/offers/new_purchase.html.slim
+++ b/app/views/offers/new_purchase.html.slim
@@ -10,7 +10,7 @@ section.purchase
               span.glyphicon.glyphicon-grain
               = @offer.producer.name
             .offer-info__products
-              p = simple_format @offer.products_description
+              p = simple_format @offer.description
             .offer-info__collect
               h3.title--up.text--green Sobre a coleta
               .offer-info__coordinator
