--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -1,4 +1,4 @@
-- meta og: { title: "Tribo Viva - #{@offer.title}", description: "#{strip_tags @offer.products_description}",
+- meta og: { title: "Tribo Viva - #{@offer.title}", description: "#{strip_tags @offer.description}",
              url: request.url, image: @offer.image.url }
 
 section.offer-header
