--- a/app/views/remembers/buyer.html.slim
+++ b/app/views/remembers/buyer.html.slim
@@ -11,7 +11,7 @@ p
   | Os ALIMENTOS a serem coletados por você são:
   br
   br
-== simple_format @offer.products_description
+== simple_format @offer.description
 
 h2 LOCAL, HORÁRIO, COORDENADOR
 p ENDEREÇO: #{@offer.deliver_coordinator.address}
