--- a/app/views/remembers/deliver_coordinator.html.slim
+++ b/app/views/remembers/deliver_coordinator.html.slim
@@ -15,7 +15,7 @@ p Horário de entrega: #{I18n.l @offer.collect_starts_at - 2.hours, format: :sho
 p
   | Produtos:
   br
-== simple_format @offer.products_description
+== simple_format @offer.description
 
 hr
 
