--- a/app/views/checkouts/success.html.slim
+++ b/app/views/checkouts/success.html.slim
@@ -24,7 +24,7 @@ section.purchase
                     | #{t('activerecord.attributes.offer.coordinator_tax')}: 
                     |  #{number_to_currency order.offer.coordinator_tax}
                   li TOTAL DA OFERTA: #{number_to_currency order.total}
-                p = simple_format order.offer.products_description                
+                p = simple_format order.offer.description                
               .offer-info__collect
                 .offer-info__coordinator
                   span.offer-info__coordinator__avatar style="background-image: url(#{order.offer.deliver_coordinator.avatar});"
@@ -82,7 +82,7 @@ section.purchase
                     | #{t('activerecord.attributes.offer.coordinator_tax')}: 
                     |  #{number_to_currency order.offer.coordinator_tax}
                   li TOTAL DA OFERTA: #{number_to_currency order.total}
-                p = simple_format order.offer.products_description                
+                p = simple_format order.offer.description                
               
             span.text--green VALOR DA TRANSAÇÃO: #{number_to_currency @purchase.taxes}
             h2.title--up.text--green.u-marginTop5 TOTAL A PAGAR: #{number_to_currency @purchase.total_with_taxes}.
