--- a/app/views/remembers/producer.html.slim
+++ b/app/views/remembers/producer.html.slim
@@ -14,7 +14,7 @@ p Seguem as informações sobre as #{@offers.count} entregas de amanhã, #{I18n.
   p Horário: #{I18n.l offer.collect_starts_at - 2.hours, format: :short} (aproximadamente).
 
   h3 Produtos:
-  == simple_format offer.products_description
+  == simple_format offer.description
   p SUBTOTAL = "#{ActionController::Base.helpers.number_to_currency offer.value} x #{offer.orders.sum(:quantity)} = #{ActionController::Base.helpers.number_to_currency offer.purchases.sum(:total)}"
 
   iframe src="#{'https://maps.google.com/?q='+URI.encode(offer.deliver_coordinator.address)+'&output=embed'}" width="600" height="450" frameborder="0" style="border:0"
