--- a/app/views/remembers/producer.text.erb
+++ b/app/views/remembers/producer.text.erb
@@ -14,7 +14,7 @@ Coordenador de entrega: <%= offer.deliver_coordinator.name %> - <%= offer.delive
 Horário: <%= I18n.l offer.collect_starts_at - 2.hours, format: :short %> (aproximadamente).
 
 Produtos:
-<%= ActionController::Base.helpers.strip_tags offer.products_description.gsub(/<\/(p|li|ul|br)>/, "\n") %>
+<%= ActionController::Base.helpers.strip_tags offer.description.gsub(/<\/(p|li|ul|br)>/, "\n") %>
 SUBTOTAL: <%= ActionController::Base.helpers.number_to_currency offer.value %> x <%= offer.orders.sum(:quantity) %> = <%= ActionController::Base.helpers.number_to_currency offer.purchases.sum(:total) %>
 
 <% items << offer.purchases.sum(:total) %>
