--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -36,7 +36,26 @@ section.offer-info
           .col-sm-6.col-md-8
             .offer-info__products
               h2.title--up.text--green O que vem na oferta
-              p = simple_format @offer.products_description
+              .row
+                - if @offer.offer_items.any?
+                  table.table.table-striped
+                    tr
+                      th Nome
+                      th Quantidade
+                      th Unidade
+                      th Preço Unitário
+                      th Preço Total
+                    - @offer.offer_items.each do |item|
+                      tr
+                        td = item.name
+                        td = item.quantity
+                        td = OfferItemUnit.t item.unit
+                        td = number_to_currency item.unit_price
+                        td = number_to_currency item.total
+              
+              .row
+                p = simple_format @offer.description
+            
             .offer-info__collect
               h2.title--up.text--green Sobre a coleta
               .offer-info__coordinator
