--- a/app/views/remembers/buyer.html.slim
+++ b/app/views/remembers/buyer.html.slim
@@ -8,9 +8,26 @@ p
 h2 ITENS DA COLETA
 
 p
-  | Os ALIMENTOS a serem coletados por você são:
+  | Os ALIMENTOS a serem coletados por você são (<b>para cada cota comprada</b>):
   br
   br
+
+- if @offer.offer_items.any?
+  table.table.table-striped
+    tr
+      th Nome
+      th Quantidade
+      th Unidade
+      th Preço Unitário
+      th Preço Total
+    - @offer.offer_items.each do |item|
+      tr
+        td = item.name
+        td = item.quantity
+        td = OfferItemUnit.t item.unit
+        td = number_to_currency item.unit_price
+        td = number_to_currency item.total
+
 == simple_format @offer.description
 
 h2 LOCAL, HORÁRIO, COORDENADOR
