--- a/app/views/remembers/deliver_coordinator.html.slim
+++ b/app/views/remembers/deliver_coordinator.html.slim
@@ -13,8 +13,25 @@ p Entregador: #{@offer.producer.contact_name} (Telefone: #{@offer.producer.phone
 p Horário de entrega: #{I18n.l @offer.collect_starts_at - 2.hours, format: :short} (aproximadamente).
 
 p
-  | Produtos:
+  | Produtos de <b>CADA UMA</b> das cotas:
   br
+  
+- if @offer.offer_items.any?
+  table.table.table-striped
+    tr
+      th Nome
+      th Quantidade
+      th Unidade
+      th Preço Unitário
+      th Preço Total
+    - @offer.offer_items.each do |item|
+      tr
+        td = item.name
+        td = item.quantity
+        td = OfferItemUnit.t item.unit
+        td = number_to_currency item.unit_price
+        td = number_to_currency item.total
+
 == simple_format @offer.description
 
 hr
