Improves home page cards

--- a/app/assets/stylesheets/base/_utility.scss
+++ b/app/assets/stylesheets/base/_utility.scss
@@ -30,11 +30,11 @@
   }
 
   .u-marginBot#{$value} {
-    margin-bottom: #{$value}px;
+    margin-bottom: #{$value}px !important;
   }
 
   .u-marginTop#{$value} {
-    margin-top: #{$value}px;
+    margin-top: #{$value}px !important;
   }
 
   .u-paddingLft#{$value} {
@@ -138,6 +138,20 @@
 
 .u-textBold {
   font-weight: 700;
+}
+
+.u-textBigger {
+  font-size: 130%;
+}
+
+// # Text Color
+// # =================================================================
+.u-textBrownMedium {
+  color: $brown-medium;
+}
+
+.u-textYellow {
+  color: $yellow-medium;
 }
 
 // # Misc
