--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -43,7 +43,7 @@ section.offer-info
                 span.offer-info__coordinator__avatar style="background-image: url(#{@offer.deliver_coordinator.avatar.url(:mini_thumb)});"
                 span.offer-info__coordinator__name
                   p = @offer.deliver_coordinator.name
-                  .small Coordenador de Entrega
+                  .small Coordenador(a) de Entrega
               p As compras devem ser retiradas na data e local abaixo:
               ul
                 li
