Adds items quantity and remove values for each item on deliver coordinator mailer

--- a/app/views/remembers/deliver_coordinator.html.slim
+++ b/app/views/remembers/deliver_coordinator.html.slim
@@ -13,24 +13,20 @@ p Entregador: #{@offer.producer.contact_name} (Telefone: #{@offer.producer.phone
 p Horário de entrega: #{I18n.l @offer.collect_starts_at - 2.hours, format: :short} (aproximadamente).
 
 p
-  | Produtos de <b>CADA UMA</b> das cotas:
+  | Produtos de todas as cotas:
   br
-  
+
 - if @offer.offer_items.any?
   table.table.table-striped
     tr
       th Nome
       th Quantidade
       th Unidade
-      th Preço Unitário
-      th Preço Total
     - @offer.offer_items.each do |item|
       tr
         td = item.name
-        td = item.quantity
+        td = item.quantity*@quotes_quantity
         td = OfferItemUnit.t item.unit
-        td = number_to_currency item.unit_price
-        td = number_to_currency item.total
 
 == simple_format @offer.description
 
@@ -55,3 +51,7 @@ p
   | A Tribo Viva conta com um parceiro de entregas, caso você necessite de um.
   br
   | Para mais informações, clique #{link_to 'aqui', delivery_url}.
+
+h2 Dúvidas?
+
+p Qualquer dúvida ... ligue para gente: Pietro Rocha (51) 9856 1431 ou Marcos Delgado (51) 92056715
