--- a/app/views/checkouts/success.html.slim
+++ b/app/views/checkouts/success.html.slim
@@ -14,6 +14,25 @@ section.purchase
             - @purchase.orders.each do |order|
               h3.title--up.text--green = order.offer.title
               .offer-info__products  
+                - if order.offer.offer_items.any?
+                .table-responsive
+                  table.table.table-bordered
+                    tr
+                      th.text--green Nome
+                      th.text--green Quantidade
+                      th.text--green Preço Un.
+                      th.text--green Total
+                    - order.offer.offer_items.each do |item|
+                      tr
+                        td = item.name
+                        td 
+                          span 
+                            | #{item.quantity} #{OfferItemUnit.t item.unit}
+                        td = number_to_currency item.unit_price
+                        td = number_to_currency item.total
+
+                p = simple_format order.offer.description
+                br
                 ul 
                   li QUANTIDADE: #{order.quantity} cota(s)
                   li VALOR UNITÁRIO (repassados ao produtor): #{number_to_currency order.offer.value}
@@ -24,25 +43,6 @@ section.purchase
                     | #{t('activerecord.attributes.offer.coordinator_tax')}: 
                     |  #{number_to_currency order.offer.coordinator_tax}
                   li TOTAL DA OFERTA: #{number_to_currency order.total}
-                .row
-                  - if order.offer.offer_items.any?
-                    table.table.table-striped
-                      tr
-                        th Nome
-                        th Quantidade
-                        th Unidade
-                        th Preço Unitário
-                        th Preço Total
-                      - order.offer.offer_items.each do |item|
-                        tr
-                          td = item.name
-                          td = item.quantity
-                          td = OfferItemUnit.t item.unit
-                          td = number_to_currency item.unit_price
-                          td = number_to_currency item.total
-                
-                .row
-                  p = simple_format order.offer.description
 
               .offer-info__collect
                 .offer-info__coordinator
