Fixes typo for offers#show page

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -104,7 +104,7 @@ section.offer-info
                     span.fa.fa-map-marker.u-textBrownMedium
                     |  não cobre a Zona Sul de POA
                     br 
-                    = link_to 'Confira a Fãn Page', 'https://www.facebook.com/TeleBikeEntregas', target: '_blank', class: 'text--yellow'
+                    = link_to 'Confira a Fan Page', 'https://www.facebook.com/TeleBikeEntregas', target: '_blank', class: 'text--yellow'
                   hr.u-borderBrownMedium
                   h4.widget__producer__name.text--yellow  EcoBike Courier
                   p.text--white
