--- a/app/assets/stylesheets/organisms/_form.scss
+++ b/app/assets/stylesheets/organisms/_form.scss
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 .form {
   width: 100%;
   padding: 20px 40px 60px 40px;
@@ -64,4 +68,5 @@
 .checkout {
   padding: 80px 0 80px 0;
   background-color: $brown-medium;
+  min-height: 100%;
 }
